# blazenet-coordinator

./: .gitmodules  README.md
blazegui/: CMakeLists.txt
blazegui/Data/: blazegui.service
blazegui/Data/blazenet-coordinator/: blazegui.toml  config.toml  udev.rules
blazegui/Sources/: Main.cpp
blazegui/Sources/Config/: Reader.cpp  Reader.h
blazegui/Sources/Drivers/: Init.cpp  Init.h
blazegui/Sources/Drivers/Display/: Base.h  St7789.cpp  St7789.h
blazegui/Sources/Gui/: DisplayManager.cpp  DisplayManager.h  Screen.h  TextRenderer.h
blazegui/Sources/Gui/Screens/: Info.cpp  Info.h
blazegui/Sources/Rpc/: BlazedClient.cpp  BlazedClient.h
blazegui/Sources/Support/: Cbor.h  Confd.h  Gpio.h  Logging.h  Watchdog.h
coordinatord/: CMakeLists.txt  README.md
coordinatord/Sources/: Main.cpp  Radio.cpp  Radio.h
coordinatord/Sources/Config/: Reader.cpp  Reader.h  Runtime.h  RuntimeConfd.h
coordinatord/Sources/Protocol/: Beaconator.cpp  Beaconator.h  Handler.cpp  Handler.h
coordinatord/Sources/Rpc/: ClientConnection.cpp  ClientConnection.h  Server.cpp  Server.h  Types.h
coordinatord/Sources/Rpc/Endpoints/: Config.cpp  Config.h  Status.cpp  Status.h
coordinatord/Sources/Support/: Cbor.h  Confd.cpp  Confd.h  EventLoop.cpp  EventLoop.h  HexDump.h  Logging.cpp  Watchdog.cpp
coordinatord/Sources/Transports/: Base.cpp  Base.h  Commands.h  Spidev.cpp  Spidev.h  Transport.h
coordinatord/Sources/misc/: Logging.cpp  Logging.h
webui/: .gitignore  README.md  composer.json  package-lock.json  package.json  tsconfig.json  webpack.mix.js
webui/app/Http/Controllers/: AuthController.php  HomeController.php
webui/app/Models/: User.php
webui/app/Providers/: AppServiceProvider.php  ViewServiceProvider.php
webui/app/View/Components/: Alert.php  Layout.php  Navbar.php
webui/config/: database.php
webui/database/migrations/: 2014_10_12_000000_create_users_table.php
webui/database/seeders/: DatabaseSeeder.php  DefaultUserSeeder.php
webui/public/: .gitignore
webui/public/css/: .gitignore
webui/public/js/: .gitignore
webui/resources/css/: _app.sass  _bulma.sass  _fonts.scss  _footer.scss  _navbar.scss  app-dark.sass  app-light.sass  app.scss
webui/resources/fonts/: .gitattributes
webui/resources/js/: app.ts  bootstrap.js
webui/resources/js/bulma/: modal.ts  tabs.ts
webui/resources/lang/en/: auth.php  footer.php  navbar.php
webui/resources/views/: home.blade.php  welcome.blade.php
webui/resources/views/auth/: changePassword.blade.php  login.blade.php
webui/resources/views/components/: alert.blade.php  layout-footer.blade.php  layout.blade.php  navbar.blade.php  session-messages.blade.php
webui/routes/: web.php
